--- a/B29/test-output/old/Default suite/reporter-output.html
+++ b/B29/test-output/old/Default suite/reporter-output.html
@@ -1,5 +1,2 @@
-<h2>Reporter output</h2><table><tr><td>https://demo.actitime.com/login.do</td></tr>
-<tr><td>actiTIME - Login</td></tr>
-<tr><td>A1</td></tr>
-<tr><td>admin</td></tr>
+<h2>Reporter output</h2><table><tr><td>Element is displayed</td></tr>
 </table>
