--- a/B29/test-output/old/Default suite/methods.html
+++ b/B29/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8cb7c7">  <td>22/03/07 09:07:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:script.Test1@1c98290c]">&gt;&gt;openApp</td> 
+<tr bgcolor="8cb7c7">  <td>22/03/07 09:33:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApp()[pri:0, instance:script.ValidLogin@1c98290c]">&gt;&gt;openApp</td> 
 <td>&nbsp;</td>  <td>main@118555812</td>   <td></td> </tr>
-<tr bgcolor="8d6d84">  <td>22/03/07 09:07:15</td>   <td>12472</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.testA()[pri:0, instance:script.Test1@1c98290c]">testA</td> 
+<tr bgcolor="8d6d84">  <td>22/03/07 09:33:44</td>   <td>7713</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.testValidLogin()[pri:1, instance:script.ValidLogin@1c98290c]">testValidLogin</td> 
   <td>main@118555812</td>   <td></td> </tr>
-<tr bgcolor="8cb7c7">  <td>22/03/07 09:07:19</td>   <td>16284</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:script.Test1@1c98290c]">&lt;&lt;closeApp</td> 
+<tr bgcolor="8cb7c7">  <td>22/03/07 09:33:49</td>   <td>12265</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:script.ValidLogin@1c98290c]">&lt;&lt;closeApp</td> 
 <td>&nbsp;</td>  <td>main@118555812</td>   <td></td> </tr>
 </table>
